welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
 return (90 <= n <=100) && (190 <= n <= 200) 
}